fix mona lisa bug, rewrite attract villager, etc

--- a/index.html
+++ b/index.html
@@ -498,14 +498,14 @@ function change(str){
 </ul>
 
 <h3>异变生物</h3>
-<p>生成生物时有一定几率生成，或在黑暗仪式失败时生成。异变生物和通常的动物外观无差异，但是会主攻靠近并攻击玩家。</p>
+<p>生成生物时有5%几率生成，或在黑暗仪式失败时生成。异变生物和通常的动物外观无差异，但是会主攻靠近并攻击玩家。</p>
 <ul>
 <li>异变牛——对玩家造成饥饿效果，掉落皮革和腐肉。</li>
 <li>异变哞菇——对玩家造成饥饿效果，掉落红色蘑菇和腐肉。</li>
 <li>异变羊——对玩家造成缓慢效果，掉落黑色羊毛和骨头。</li>
 <li>异变猪——靠近后直接爆炸，掉落腐肉和火药。</li>
 <li>异变鸡——对玩家造成中毒效果，掉落羽毛和线。</li>
-<li>异变兔子——不会主动靠近玩家。对玩家造成凋零效果，掉落小块皮革和骨头。</li>
+<li>异变兔子——对玩家造成凋零效果，掉落小块皮革和骨头。</li>
 </ul>
 
 <p><img style="width:48%" src="items/screenshots/1_zombie.png" /> <img style="width:48%" src="items/screenshots/1_dark_animal.png" /></p>
@@ -1215,7 +1215,7 @@ function change(str){
 <span class="dropper" title="机械核心"><span class="enchant">*</span>
 </span></span></span></td><td></td></tr>
 
-<tr><th><strong id="compressor">压缩器 (Compressor)</strong></th><td>附魔之瓶+<a href="#blue_force_of_sky" onclick="change('elements');">蓝色天之力</a>+<a href="#enchanted_gold">附魔金锭</a>+石制按钮+<a href="#enchanted_iron">附魔铁锭</a>+<a href="#enchanted_diamond">附魔钻石</a></td>
+<tr><th><strong id="compressor">压缩器 (Compressor)</strong></th><td>附魔之瓶+<a href="#blue_force_of_sky" onclick="change('elements');">蓝色天之力</a>+<a href="#enchanted_gold">附魔金锭</a>+活塞+<a href="#enchanted_iron">附魔铁锭</a>+<a href="#silicon_plate">硅板</a></td>
 <td><span class="mcui"><span><span class="mcui-row"><span class="experience_bottle" title="附魔之瓶">
 </span><span class="colorful_items blue_force_of_sky" title="蓝色天之力">
 </span><span class="experience_bottle" title="附魔之瓶">
@@ -1229,7 +1229,7 @@ function change(str){
 <span class="colorful_items compressor" title="压缩器">
 </span></span></span></td><td>右键将地面的64个物品压缩，重新扔出可复原压缩的物品。最高可进行八重压缩。如果将压缩后的方块放置将只能得到1个原有的物品。</td></tr>
 
-<tr><th><strong id="elder_s_words">年长者之教诲 (Elder's Words)</strong></th><td>附魔之瓶+<a href="#cyan_force_of_mountain" onclick="change('elements')">青色山之力</a>+<a href="#enchanted_gold">附魔金锭</a>+书+<a href="#enchanted_iron">附魔铁锭</a>+<a href="#enchanted_diamond">附魔钻石</a></td>
+<tr><th><strong id="elder_s_words">年长者之教诲 (Elder's Words)</strong></th><td>附魔之瓶+<a href="#cyan_force_of_mountain" onclick="change('elements')">青色山之力</a>+<a href="#enchanted_gold">附魔金锭</a>+书+<a href="#enchanted_iron">附魔铁锭</a>+<a href="#silicon_plate">硅板</a></td>
 <td><span class="mcui"><span><span class="mcui-row"><span class="experience_bottle" title="附魔之瓶">
 </span><span class="colorful_items cyan_force_of_mountain" title="青色山之力">
 </span><span class="experience_bottle" title="附魔之瓶">
@@ -1243,7 +1243,7 @@ function change(str){
 <span class="colorful_items elder_s_words" title="年长者之教诲">
 </span></span></span></td><td>每2.5秒给予拥有者1点经验，放置在末影箱亦可生效。</td></tr>
 
-<tr><th><strong id="coordinate_recorder">坐标记录仪 (Coordinate Recorder)</strong></th><td>附魔之瓶+<a href="#purple_force_of_life" onclick="change('elements')">紫色命之力</a>+<a href="#enchanted_gold">附魔金锭</a>+书+<a href="#enchanted_iron">附魔铁锭</a>+<a href="#enchanted_diamond">附魔钻石</a></td>
+<tr><th><strong id="coordinate_recorder">坐标记录仪 (Coordinate Recorder)</strong></th><td>附魔之瓶+<a href="#purple_force_of_life" onclick="change('elements')">紫色命之力</a>+<a href="#enchanted_gold">附魔金锭</a>+纸+<a href="#enchanted_iron">附魔铁锭</a>+<a href="#silicon_plate">硅板</a></td>
 <td><span class="mcui"><span><span class="mcui-row"><span class="experience_bottle" title="附魔之瓶">
 </span><span class="colorful_items purple_force_of_life" title="紫色命之力">
 </span><span class="experience_bottle" title="附魔之瓶">
