--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@ function change(str){
 </ul>
 
 <h3>异变生物</h3>
-<p>生成生物时有5%几率生成，或在黑暗仪式失败时生成。异变生物和通常的动物外观无差异，但是会主攻靠近并攻击玩家。</p>
+<p>生成生物时有5%几率生成，或在黑暗仪式失败时生成。异变生物和通常的动物外观无差异，但是会主攻靠近并攻击玩家。异变生物会掉落<strong id="shade_of_the_darkness">黑暗碎片</strong>。</p>
 <ul>
 <li>异变牛——对玩家造成饥饿效果，掉落皮革和腐肉。</li>
 <li>异变哞菇——对玩家造成饥饿效果，掉落红色蘑菇和腐肉。</li>
