--- a/index.html
+++ b/index.html
@@ -1147,13 +1147,13 @@ function change(str){
 
 <tr><th><strong id="origin_of_the_world">世界之源 (Origin of the World)<strong></th><td><a href="#wing_of_sky" onclick="change('entities');">天空之翼</a>+<a href="#limb_of_ridge">山脉之肢</a>+红石<td><span class="mcui"><span>
 <span class="mcui-row"><span class="empty">
-</span><span class="feather" title="天空之翼"><span class="enchant">*</span>
+</span><span class="colorful_items wing_of_sky" title="天空之翼"><span class="enchant">*</span>
 </span><span class="empty">
-</span></span><span class="mcui-row"><span class="rabbit_foot" title="山脉之肢"><span class="enchant">*</span>
+</span></span><span class="mcui-row"><span class="colorful_items limb_of_ridge" title="山脉之肢"><span class="enchant">*</span>
 </span><span class="redstone" title="红石">
-</span><span class="rabbit_foot" title="山脉之肢"><span class="enchant">*</span>
+</span><span class="colorful_items limb_of_ridge" title="山脉之肢"><span class="enchant">*</span>
 </span></span><span class="mcui-row"><span class="empty">
-</span><span class="feather" title="天空之翼"><span class="enchant">*</span>
+</span><span class="colorful_items wing_of_sky" title="天空之翼"><span class="enchant">*</span>
 </span><span class="empty">
 </span></span></span><span class="mcui-arrow"></span><span class="mcui-output">
 <span class="colorful_items origin_of_the_world" title="世界之源">
@@ -2003,19 +2003,19 @@ function change(str){
 <p>仪式完成后，36米内可繁殖的<abbr title="牛、羊、猪、鸡、兔子、哞菇">动物</abbr>会开始寻找配偶。然而，仪式有10%的几率失败，一旦失败，所有这些动物都会变成黑暗生物。</p>
 
 <h4>黑暗召唤</h4>
-<p>消耗：<a onclick="change('entities')" href="#shard_of_the_darkness">黑暗碎片</a>+刷怪蛋+<a onclick="change('entities')" href="#shard_of_the_darkness">破损刷怪笼</a>
+<p>消耗：<a onclick="change('entities')" href="#shard_of_the_darkness">黑暗碎片</a>+刷怪蛋+<a onclick="change('entities')" href="#shard_of_the_darkness">破损刷怪箱</a>
 <span class="mcui-row"><span class="colorful_items shard_of_the_darkness" title="黑暗碎片">
 </span><span class="blaze_spawn_egg" title="烈焰人刷怪蛋">
 </span><span class="colorful_items shard_of_the_darkness" title="黑暗碎片">
 </span></span><span class="mcui-row"><span class="blaze_spawn_egg" title="烈焰人刷怪蛋">
-</span><span class="colorful_items broken_mob_spawner" title="破损刷怪笼">
+</span><span class="colorful_items broken_mob_spawner" title="破损刷怪箱">
 </span><span class="blaze_spawn_egg" title="烈焰人刷怪蛋">
 </span></span><span class="mcui-row"><span class="colorful_items shard_of_the_darkness" title="黑暗碎片">
 </span><span class="blaze_spawn_egg" title="烈焰人刷怪蛋">
 </span><span class="colorful_items shard_of_the_darkness" title="黑暗碎片">
 </span></span></p>
 <p>消耗施法者生命：12点。时长：60秒</p>
-<p>仪式完成后，破损刷怪笼将会变成刷怪笼。仅支持僵尸、骷髅、蜘蛛、洞穴蜘蛛、爬行者、烈焰人。</p>
+<p>仪式完成后，破损刷怪箱将会变成刷怪箱。仅支持僵尸、骷髅、蜘蛛、洞穴蜘蛛、爬行者、烈焰人。</p>
 
 
 </article>
