--- a/index.html
+++ b/index.html
@@ -1410,7 +1410,7 @@ function change(str){
 </span><span class="bowl" title="碗">
 </span><span class="empty">
 </span></span></span><span class="mcui-arrow"></span><span class="mcui-output">
-<span class="rabbit_stew" title="生土豆排骨"><span class="enchant">*</span></span></span></span></td></tr>
+<span class="rabbit_stew" title="生缤纷菜蔬"><span class="enchant">*</span></span></span></span></td></tr>
 
 <tr><th><strong id="raw_braised_pork_with_potatoes">生土豆排骨 (Raw Braised Pork with Potato)</strong><br /><img src="items/hunger.svg" style="width:18px;height:18px;" title="10" /><img src="items/hunger.svg" style="width:18px;height:18px;" title="10" /><img src="items/hunger.svg" style="width:18px;height:18px;" title="10" /><img src="items/hunger.svg" style="width:18px;height:18px;" title="10" /><img src="items/hunger.svg" style="width:18px;height:18px;" title="10" /></th><td><a href="#bottle_of_salt" onclick="change('machines');">盐瓶</a>+生猪排+南瓜+马铃薯+碗</td><td><span class="mcui"><span>
 <span class="mcui-row"><span class="empty">
@@ -1462,7 +1462,7 @@ function change(str){
 </span><span class="bowl" title="碗">
 </span><span class="empty">
 </span></span></span><span class="mcui-arrow"></span><span class="mcui-output">
-<span class="rabbit_stew" title="生土豆牛肉"><span class="enchant">*</span></span></span></span></td></tr>
+<span class="rabbit_stew" title="炸鱼薯条"><span class="enchant">*</span></span></span></span></td></tr>
 
 <tr><th><strong id="meat_floss_bread">肉松面包 (Meat Floss Bread)</strong><br /><img src="items/hunger.svg" style="width:18px;height:18px;" title="10" /><img src="items/hunger.svg" style="width:18px;height:18px;" title="10" /><img src="items/hunger.svg" style="width:18px;height:18px;" title="10" /><img src="items/hunger.svg" style="width:18px;height:18px;" title="10" /><img src="items/hunger.svg" style="width:18px;height:18px;" title="10" /><br /><span class="effect speed"></span> <span class="lore">速度 00:30</span></th><td><a href="#bottle_of_salt" onclick="change('machines');">盐瓶</a>+小麦+熟鸡肉</td><td><span class="mcui"><span>
 <span class="mcui-row"><span class="empty">
@@ -1487,7 +1487,7 @@ function change(str){
 </span></span></span>
 </td><td>耗时10秒</td></tr>
 
-<tr><th><strong id="egg_stew">烤胡萝卜 (Egg Stew)</strong><br /><img src="items/hunger.svg" style="width:18px;height:18px;" title="5" /><img src="items/hunger.svg" style="width:18px;height:18px;" title="5" /><img src="items/hunger_half.svg" style="width:18px;height:18px;" title="5" /></th><td>胡萝卜</td><td>
+<tr><th><strong id="cooked_carrot">烤胡萝卜 (Cooked Carrot)</strong><br /><img src="items/hunger.svg" style="width:18px;height:18px;" title="5" /><img src="items/hunger.svg" style="width:18px;height:18px;" title="5" /><img src="items/hunger_half.svg" style="width:18px;height:18px;" title="5" /></th><td>胡萝卜</td><td>
 <span class="mcui"><span><span class="mcui-row"><span class="carrot" title="胡萝卜">
 </span></span><span class="mcui-row"><span style="width:32px;height:32px;background-image:url(items/smelting.png);border-style:none;background-color:#c6c6c6;"></span></span><span class="mcui-row"><span class="coal" title="燃料"></span></span></span><span class="mcui-arrow"></span><span class="mcui-output">
 <span class="carrot" title="烤胡萝卜"><span class="enchant">*</span>
@@ -1589,7 +1589,7 @@ function change(str){
 </td><td><span class="mcui-row"><span class="clock" title="15秒">
 </span></span></td></tr>
 
-<tr><td><strong>拔丝苹果 (Toffee Apple)</strong><br/>
+<tr><td><strong id="toffee_apple">拔丝苹果 (Toffee Apple)</strong><br/>
 <img src="items/hunger.svg" style="width:18px;height:18px;" title="6" /><img src="items/hunger.svg" style="width:18px;height:18px;" title="6" /><img src="items/hunger.svg" style="width:18px;height:18px;" title="6" /> <span class="effect speed"></span> 迅捷 30秒</td><td><span class="mcui-row"><span class="apple" title="拔丝苹果"><span class="enchant">*</span>
 </span></span></td><td><span class="mcui-row"><span class="apple" title="苹果">
 </span><span class="sugar" title="糖">
