--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@ function change(str){
 <table><thead><tr><th>支持的minecraft版本</th><th>模组版本及下载链接</th><th>简介</th></tr></thead>
 <tbody>
 <tr><td>Minecraft Java版 18w16a</td><td>
-<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/blob/master/versions/1.8">craftingpp-1.8 预览版 m05d01</a></td><td><a href="">网站链接</a></td></tr>
+<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/blob/master/versions/1.8">craftingpp-1.8 m05d10(预览版)</a></td><td><a href="">网站链接</a></td></tr>
 <tr><td>Minecraft Java版 1.12</td><td>
 <a href="http://www.mcbbs.net/forum.php?mod=attachment&aid=MTA4NDIzM3xhYjM4MDU1NnwxNTExNjI3NjYwfDk3NTUyNXw2OTY4NjE%3D">craftingpp-1.7.4</a></td><td><a href="http://www.mcbbs.net/forum.php?mod=viewthread&tid=696861&cp=2">网站链接</a></td></tr>
 <tr><td>Minecraft Java版 1.12 pre</td><td>
@@ -1147,13 +1147,13 @@ function change(str){
 
 <tr><th><strong id="origin_of_the_world">世界之源 (Origin of the World)<strong></th><td><a href="#wing_of_sky" onclick="change('entities');">天空之翼</a>+<a href="#limb_of_ridge">山脉之肢</a>+红石<td><span class="mcui"><span>
 <span class="mcui-row"><span class="empty">
-</span><span class="colorful_items wing_of_sky" title="天空之翼"><span class="enchant">*</span>
+</span><span class="colorful_items wing_of_sky" title="天空之翼">
 </span><span class="empty">
-</span></span><span class="mcui-row"><span class="colorful_items limb_of_ridge" title="山脉之肢"><span class="enchant">*</span>
+</span></span><span class="mcui-row"><span class="colorful_items limb_of_ridge" title="山脉之肢">
 </span><span class="redstone" title="红石">
-</span><span class="colorful_items limb_of_ridge" title="山脉之肢"><span class="enchant">*</span>
+</span><span class="colorful_items limb_of_ridge" title="山脉之肢">
 </span></span><span class="mcui-row"><span class="empty">
-</span><span class="colorful_items wing_of_sky" title="天空之翼"><span class="enchant">*</span>
+</span><span class="colorful_items wing_of_sky" title="天空之翼">
 </span><span class="empty">
 </span></span></span><span class="mcui-arrow"></span><span class="mcui-output">
 <span class="colorful_items origin_of_the_world" title="世界之源">
@@ -1223,7 +1223,7 @@ function change(str){
 </span><span class="piston" title="活塞">
 </span><span class="gold_ingot" title="附魔金锭"><span class="enchant">*</span>
 </span></span><span class="mcui-row"><span class="iron_ingot" title="附魔铁锭"><span class="enchant">*</span>
-</span><span class="heavy_weighted_pressure_plate" title="硅板"><span class="enchant">*</span>
+</span><span class="colorful_items silicon_plate" title="硅板">
 </span><span class="iron_ingot" title="附魔铁锭"><span class="enchant">*</span>
 </span></span></span><span class="mcui-arrow"></span><span class="mcui-output">
 <span class="colorful_items compressor" title="压缩器">
@@ -1237,7 +1237,7 @@ function change(str){
 </span><span class="book" title="书">
 </span><span class="gold_ingot" title="附魔金锭"><span class="enchant">*</span>
 </span></span><span class="mcui-row"><span class="iron_ingot" title="附魔铁锭"><span class="enchant">*</span>
-</span><span class="heavy_weighted_pressure_plate" title="硅板"><span class="enchant">*</span>
+</span><span class="colorful_items silicon_plate" title="硅板">
 </span><span class="iron_ingot" title="附魔铁锭"><span class="enchant">*</span>
 </span></span></span><span class="mcui-arrow"></span><span class="mcui-output">
 <span class="colorful_items elder_s_words" title="年长者之教诲">
@@ -1251,7 +1251,7 @@ function change(str){
 </span><span class="paper" title="纸">
 </span><span class="gold_ingot" title="附魔金锭"><span class="enchant">*</span>
 </span></span><span class="mcui-row"><span class="iron_ingot" title="附魔铁锭"><span class="enchant">*</span>
-</span><span class="heavy_weighted_pressure_plate" title="硅板"><span class="enchant">*</span>
+</span><span class="colorful_items silicon_plate" title="硅板">
 </span><span class="iron_ingot" title="附魔铁锭"><span class="enchant">*</span>
 </span></span></span><span class="mcui-arrow"></span><span class="mcui-output">
 <span class="colorful_items coordinate_recorder" title="坐标记录仪">
@@ -1265,7 +1265,7 @@ function change(str){
 </span><span class="ender_pearl" title="末影珍珠">
 </span><span class="gold_ingot" title="附魔金锭"><span class="enchant">*</span>
 </span></span><span class="mcui-row"><span class="iron_ingot" title="附魔铁锭"><span class="enchant">*</span>
-</span><span class="heavy_weighted_pressure_plate" title="硅板"><span class="enchant">*</span>
+</span><span class="colorful_items silicon_plate" title="硅板">
 </span><span class="iron_ingot" title="附魔铁锭"><span class="enchant">*</span>
 </span></span></span><span class="mcui-arrow"></span><span class="mcui-output">
 <span class="ender_pearl" title="传送球"><span class="enchant">*</span>
@@ -1630,50 +1630,34 @@ function change(str){
 <strong>羽毛种子 (Feather Seeds)</strong><br />
 <strong>腐肉种子 (Rotten Flesh Seeds)</strong><br />
 <strong>火药种子 (Gunpowder Seeds)</strong><br />
-<strong>燧石种子 (Flint Seeds)</strong><br />
 <strong>木炭种子 (Charcoal Seeds)</strong><br />
-<strong>煤炭种子 (Coal Seeds)</strong><br />
+<strong>燧石种子 (Flint Seeds)</strong><br />
 <strong>线种子 (String Seeds)</strong><br />
 <strong>骨粉种子 (Bone Meal Seeds)</strong><br />
 <strong>蜘蛛眼种子 (Spider Eye Seeds)</strong><br />
-<strong>铁种子 (Iron Seeds)</strong><br />
-<strong>青金石种子 (Lapis Lazuli Seeds)</strong><br />
 <strong>海晶砂粒种子 (Prismarine Crystal Seeds)</strong><br />
 <strong>粘液球种子 (Slime Ball Seeds)</strong><br />
 <strong>烈焰粉种子 (Blaze Powder Seeds)</strong><br />
 <strong>末影珍珠种子 (Ender Pearl Seeds)</strong><br />
-<strong>红石种子 (Redstone Seeds)</strong><br />
-<strong>石英种子 (Quartz Seeds)</strong><br />
-<strong>金锭种子 (Golden Seeds)</strong><br />
 <strong>恶魂之泪种子 (Ghast Tear Seeds)</strong><br />
 <strong>潜影壳种子 (Shulker Shell Seeds)</strong><br />
 <strong>幻翼膜种子 (Phantom Membrane Seeds)</strong><br />
-<strong>荧石粉种子 (Glowstone Dust Seeds)</strong><br />
-<strong>钻石种子 (Diamond Seeds)</strong><br />
-<strong>绿宝石种子 (Emerald Seeds)</strong></th><td>魔法小麦种子+8 羽毛<br />
+<strong>荧石粉种子 (Glowstone Dust Seeds)</strong></th><td>魔法小麦种子+8 羽毛<br />
 魔法小麦种子+8 腐肉<br />
 魔法小麦种子+8 火药<br />
-魔法小麦种子+8 燧石<br />
 魔法小麦种子+8 木炭<br />
-魔法小麦种子+8 煤炭<br />
+魔法甜菜种子+8 燧石<br />
 魔法甜菜种子+8 线<br />
 魔法甜菜种子+8 骨粉<br />
 魔法甜菜种子+8 蜘蛛眼<br />
-魔法甜菜种子+8 铁锭<br />
-魔法甜菜种子+8 青金石<br />
-魔法甜菜种子+8 海晶砂粒<br />
+魔法南瓜种子+8 海晶砂粒<br />
 魔法南瓜种子+8 粘液球<br />
 魔法南瓜种子+8 烈焰粉<br />
 魔法南瓜种子+8 末影珍珠<br />
-魔法南瓜种子+8 红石<br />
-魔法南瓜种子+8 石英<br />
-魔法南瓜种子+8 金锭<br />
 魔法西瓜种子+8 恶魂之泪<br />
 魔法西瓜种子+8 潜影壳<br />
 魔法西瓜种子+8 幻翼膜<br />
 魔法西瓜种子+8 荧石粉<br />
-魔法西瓜种子+8 钻石<br />
-魔法西瓜种子+8 绿宝石</td>
 <td><span class="mcui"><span><span class="mcui-row"><span class="feather" title="羽毛">
 </span><span class="feather" title="羽毛">
 </span><span class="feather" title="羽毛">
@@ -1687,20 +1671,49 @@ function change(str){
 <span class="wheat_seeds" title="羽毛种子"><span class="enchant">*</span>
 </span></span></span></td></tr>
 
-<tr><th id="wool_sapling"><strong>羊毛树 (Wool Sapling)</strong><br /><strong>水果树 (Fruit Sapling)</strong></th>
-<td>树苗+8 白色羊毛<br />
-树苗+8 苹果</td>
+<tr><th id="fruit_sapling"><strong>水果树 (Fruit Sapling)</strong></th>
+<td>任意树苗+8 苹果</td>
+<td><span class="mcui"><span><span class="mcui-row"><span class="apple" title="苹果">
+</span><span class="apple" title="苹果">
+</span><span class="apple" title="苹果">
+</span></span><span class="mcui-row"><span class="apple" title="苹果">
+</span><span class="oak_sapling" title="任意树苗">
+</span><span class="apple" title="苹果">
+</span></span><span class="mcui-row"><span class="apple" title="苹果">
+</span><span class="apple" title="苹果">
+</span><span class="apple" title="苹果">
+</span></span></span><span class="mcui-arrow"></span><span class="mcui-output">
+<span class="oak_sapling" title="水果树"><span class="enchant">*</span>
+</span></span></span></td></tr>
+
+<tr><th id="wool_sapling"><strong>矿石树 (Ore Sapling)</strong></th>
+<td>煤炭+钻石+红石+铁锭+任意树苗<br />+金锭+青金石+绿宝石+石英</td>
+<td><span class="mcui"><span><span class="mcui-row"><span class="coal" title="煤炭">
+</span><span class="diamond" title="钻石">
+</span><span class="redstone" title="红石">
+</span></span><span class="mcui-row"><span class="iron_ingot" title="铁锭">
+</span><span class="oak_sapling" title="任意树苗">
+</span><span class="gold_ingot" title="金锭">
+</span></span><span class="mcui-row"><span class="lapis_lazuli" title="青金石">
+</span><span class="emerald" title="绿宝石">
+</span><span class="quartz" title="石英">
+</span></span></span><span class="mcui-arrow"></span><span class="mcui-output">
+<span class="spruce_sapling" title="矿石树"><span class="enchant">*</span>
+</span></span></span></td></tr>
+
+<tr><th id="wool_sapling"><strong>羊毛树 (Wool Sapling)</strong></th>
+<td>任意树苗+8 白色羊毛</td>
 <td><span class="mcui"><span><span class="mcui-row"><span class="white_wool" title="白色羊毛">
 </span><span class="white_wool" title="白色羊毛">
 </span><span class="white_wool" title="白色羊毛">
 </span></span><span class="mcui-row"><span class="white_wool" title="白色羊毛">
-</span><span class="oak_sapling" title="树苗">
+</span><span class="oak_sapling" title="任意树苗">
 </span><span class="white_wool" title="白色羊毛">
 </span></span><span class="mcui-row"><span class="white_wool" title="白色羊毛">
 </span><span class="white_wool" title="白色羊毛">
 </span><span class="white_wool" title="白色羊毛">
 </span></span></span><span class="mcui-arrow"></span><span class="mcui-output">
-<span class="oak_sapling" title="羊毛树"><span class="enchant">*</span>
+<span class="birch_sapling" title="羊毛树"><span class="enchant">*</span>
 </span></span></span></td></tr>
 
 </tbody></table>
@@ -1874,7 +1887,7 @@ function change(str){
 <p>多个生命恢复/抗性/幸运效果可提升效果等级。</p>
 <p>生命恢复(2.5秒)每恢复1点生命值、饱和每恢复1点饥饿值、潮涌能量/抗性II每3秒、其余效果每6秒，消耗1点经验值，并有1/60几率消耗烈焰粉。连锁无消耗。</p>
 <p>使用<a href="#temperancer">节制器</a>可开启/关闭所有效果。</p>
-<p>连锁钻石斧可一次性破坏相连的树和瓜，连锁钻石镐可一次性破坏相连的矿石，连锁钻石锹可一次性8米内破坏相连的沙砾、粘土、沙子和灵魂沙。该效果不受精准采集和时运影响。</p>
+<p>连锁钻石斧可一次性破坏相连的树、瓜、成熟的农作物，连锁钻石镐可一次性破坏相连的矿石，连锁钻石锹可一次性8米内破坏相连的沙砾、粘土、沙子和灵魂沙。该效果不受精准采集和时运影响。</p>
 <p>效果可重新附加，之前的效果将会被覆盖。与属性附加、附魔独立。</p>
 
 <h4>附魔书制作</h4>
