0518 修改冷冻机、造石机、孵化器、造物机，连锁斧子可以砍地狱疣和蘑菇，范围限制在15米，修复熔炼机bug

--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@ function change(str){
 </tbody></table>
 
 <h4>冷冻机</h4>
-<p>机械核心部件为<a onclick="change('elements')" href="#green_force_of_water">绿色水之力</a>。</p>
+<p>机械核心部件为<a onclick="change('elements')" href="#green_force_of_water">绿色水之力</a>。可以使用绿色水之力代替水桶以避免消耗水。</p>
 <table><thead><tr><th>模式</th><th colspan="2">消耗</th><th>产物</th><th>时长</th></tr></thead><tbody>
 <tr><td><span class="mcui-row"><span class="green_stained_glass_pane" title="绿色玻璃板">
 </span><span class="colorful_items green_force_of_water" title="绿色水之力">
@@ -804,7 +804,7 @@ function change(str){
 </span></span><span class="mcui-row"><span class="green_stained_glass_pane" title="绿色玻璃板">
 </span><span class="experience_bottle" title="附魔之瓶">
 </span><span class="green_stained_glass_pane" title="绿色玻璃板">
-</span></span></td><td>1/8附魔之瓶</td><td>水</td></td><td>雪</td><td>2秒</td></tr>	
+</span></span></td><td>附魔之瓶</td><td>水</td></td><td>8 雪</td><td>10秒</td></tr>	
 <tr><td><span class="mcui-row"><span class="water_bucket" title="水槽">
 </span><span class="colorful_items green_force_of_water" title="绿色水之力">
 </span><span class="green_stained_glass_pane" title="绿色玻璃板">
@@ -814,7 +814,7 @@ function change(str){
 </span></span><span class="mcui-row"><span class="green_stained_glass_pane" title="绿色玻璃板">
 </span><span class="experience_bottle" title="附魔之瓶">
 </span><span class="green_stained_glass_pane" title="绿色玻璃板">
-</span></span></td><td>1/4附魔之瓶</td><td>水</td></td><td>冰</td><td>2秒</td></tr>	
+</span></span></td><td>附魔之瓶</td><td>水</td></td><td>4 冰</td><td>10秒</td></tr>	
 <tr><td><span class="mcui-row"><span class="green_stained_glass_pane" title="绿色玻璃板">
 </span><span class="colorful_items green_force_of_water" title="绿色水之力">
 </span><span class="green_stained_glass_pane" title="绿色玻璃板">
@@ -824,7 +824,7 @@ function change(str){
 </span></span><span class="mcui-row"><span class="green_stained_glass_pane" title="绿色玻璃板">
 </span><span class="experience_bottle" title="附魔之瓶">
 </span><span class="green_stained_glass_pane" title="绿色玻璃板">
-</span></span></td><td>1/2附魔之瓶</td><td>水</td></td><td>浮冰</td><td>4秒</td></tr>	
+</span></span></td><td>附魔之瓶</td><td>水</td></td><td>2 浮冰</td><td>10秒</td></tr>	
 <tr><td><span class="mcui-row"><span class="green_stained_glass_pane" title="绿色玻璃板">
 </span><span class="colorful_items green_force_of_water" title="绿色水之力">
 </span><span class="green_stained_glass_pane" title="绿色玻璃板">
@@ -849,7 +849,7 @@ function change(str){
 </span></span><span class="mcui-row"><span class="cyan_stained_glass_pane" title="青色玻璃板">
 </span><span class="experience_bottle" title="附魔之瓶">
 </span><span class="cyan_stained_glass_pane" title="青色玻璃板">
-</span></span></td><td>1/8附魔之瓶</td><td>水</td></td><td>圆石</td><td>1秒</td></tr>	
+</span></span></td><td>附魔之瓶</td><td>水</td></td><td>8 圆石</td><td>10 秒</td></tr>	
 <tr><td><span class="mcui-row"><span class="cyan_stained_glass_pane" title="青色玻璃板">
 </span><span class="colorful_items cyan_force_of_mountain" title="青色山之力">
 </span><span class="lava_bucket" title="岩浆槽">
@@ -859,7 +859,7 @@ function change(str){
 </span></span><span class="mcui-row"><span class="cyan_stained_glass_pane" title="青色玻璃板">
 </span><span class="experience_bottle" title="附魔之瓶">
 </span><span class="cyan_stained_glass_pane" title="青色玻璃板">
-</span></span></td><td>1/8附魔之瓶</td><td>水</td></td><td>石头</td><td>1秒</td></tr>	
+</span></span></td><td>附魔之瓶</td><td>水</td></td><td>8 石头</td><td>10 秒</td></tr>	
 <tr><td><span class="mcui-row"><span class="water_bucket" title="水槽">
 </span><span class="colorful_items cyan_force_of_mountain" title="青色山之力">
 </span><span class="cyan_stained_glass_pane" title="青色玻璃板">
@@ -969,7 +969,7 @@ function change(str){
 </span></span><span class="mcui-row"><span class="red_stained_glass_pane" title="红色玻璃板">
 </span><span class="experience_bottle" title="附魔之瓶">
 </span><span class="red_stained_glass_pane" title="红色玻璃板">
-</span></span></td><td>水桶+向日葵</td><td><strong id="bottle_of_salt">盐瓶 (Bottle of salt)</strong></td></tr>
+</span></span></td><td>水+向日葵</td><td><strong id="bottle_of_salt">盐瓶 (Bottle of salt)</strong></td></tr>
 <tr><td colspan="7">[1] 不同矿物搭配(共28种)会对应不同的产率，产率位于0.9~3.5，模组首次加载时被确定。</td></tr>
 </tbody></table>
 
@@ -986,7 +986,7 @@ function change(str){
 </span></span>
 <p>机械核心部件为<a onclick="change('elements')" href="#purple_force_of_life">紫色命之力</a>。底部漏斗下方需再放置一个漏斗，否则会堵塞机器。</p>
 <table><thead><tr><th>方块槽</th><th>插件槽</th><th colspan="2">消耗</th><th>产物</th><th>备注</th></tr></thead><tbody>		
-<tr><td rowspan="3">耕地</td><td rowspan="5"><a href="#farm_core">农场核心</a></td><td>小麦种子/甜菜种子</td><td rowspan="35">附魔之瓶</td><td>3 小麦/甜菜根、0~3 种子</td><td rowspan="14">10秒</td></tr>
+<tr><td rowspan="3">耕地</td><td rowspan="5"><a href="#farm_core">农场核心</a></td><td>小麦种子/甜菜种子</td><td rowspan="34">附魔之瓶</td><td>3 小麦/甜菜根、0~3 种子</td><td rowspan="14">10秒</td></tr>
 <tr><td>胡萝卜/马铃薯</td><td>9 胡萝卜/马铃薯</td></tr>
 <tr><td>南瓜种子/西瓜种子</td><td>3 南瓜/西瓜</td></tr>
 <tr><td>沙子/红沙</td><td>甘蔗</td><td>6 甘蔗</td></tr>
@@ -1001,19 +1001,19 @@ function change(str){
 <tr><td rowspan="2"><a href="#forestry_core">林场核心</a></td><td>树苗</td><td>3木头、0~3树苗</td></tr>
 <tr><td>末地石</td><td>紫颂花</td><td>3紫颂果、0~3紫颂花</td></tr>
 
-<tr><td rowspan="6">草方块</td><td rowspan="6"><a href="#ranch_core">牧场核心</a></td><td>1/16 <a onclick="change('vanil')" href="#spawn_egg">牛刷怪蛋</a></td><td>2 皮革、4 牛肉</td><td rowspan="22">15秒</td></tr>
+<tr><td rowspan="6">草方块</td><td rowspan="6"><a href="#ranch_core">牧场核心</a></td><td>1/16 <a onclick="change('vanil')" href="#spawn_egg">牛刷怪蛋</a></td><td>2 皮革、4 牛肉</td><td rowspan="21">15秒</td></tr>
 <tr><td>1/16 <a onclick="change('vanil')" href="#spawn_egg">哞菇刷怪蛋</a></td><td>皮革、4 牛肉、2 红色蘑菇</td></tr>
 <tr><td>1/16 <a onclick="change('vanil')" href="#spawn_egg">羊刷怪蛋</a></td><td>白色羊毛、3 羊肉</td></tr>
 <tr><td>1/16 <a onclick="change('vanil')" href="#spawn_egg">猪刷怪蛋</a></td><td>4 猪肉</td></tr>
 <tr><td>1/16 <a onclick="change('vanil')" href="#spawn_egg">鸡刷怪蛋</a></td><td>2 羽毛、4 鸡肉、2 鸡蛋</td></tr>
 <tr><td>1/16 <a onclick="change('vanil')" href="#spawn_egg">兔子刷怪蛋</a></td><td>小块皮革、兔子肉、0.2 兔子脚</td></tr>
 
-<tr><td rowspan="13"><a onclick="change('dark_rituals')" href="#tainted_dirt">腐化土</td><td rowspan="13"><a href="#hunting_core">猎场核心</a></td><td>1/16 <a onclick="change('vanil')" href="#spawn_egg">僵尸刷怪蛋</a></td><td>1/2 附魔之瓶、2 腐肉</td></tr>
+<tr><td rowspan="13"><a onclick="change('dark_rituals')" href="#tainted_dirt">腐化土</td><td rowspan="12"><a href="#hunting_core">猎场核心</a></td><td>1/16 <a onclick="change('vanil')" href="#spawn_egg">僵尸刷怪蛋</a></td><td>1/2 附魔之瓶、2 腐肉</td></tr>
 <tr><td>1/16 <a onclick="change('vanil')" href="#spawn_egg">骷髅刷怪蛋</a></td><td>1/2 附魔之瓶、2 骨头、2 弓箭</td></tr>
 <tr><td>1/16 <a onclick="change('vanil')" href="#spawn_egg">蜘蛛刷怪蛋</a></td><td>1/2 附魔之瓶、2 线</td></tr>
 <tr><td>1/16 <a onclick="change('vanil')" href="#spawn_egg">爬行者刷怪蛋</a></td><td>1/2 附魔之瓶、2 火药</td></tr>
 
-<tr><td>1/16 <a onclick="change('vanil')" href="#spawn_egg">凋零骷髅刷怪蛋</a></td><td>1/2 附魔之瓶、2 骨头、2 煤炭</td></tr>
+<!--<tr><td>1/16 <a onclick="change('vanil')" href="#spawn_egg">凋零骷髅刷怪蛋</a></td><td>1/2 附魔之瓶、2 骨头、2 煤炭</td></tr>-->
 <tr><td>1/16 <a onclick="change('vanil')" href="#spawn_egg">僵尸猪人刷怪蛋</a></td><td>1/2 附魔之瓶、腐肉、金粒</td></tr>
 <tr><td>1/16 <a onclick="change('vanil')" href="#spawn_egg">烈焰人刷怪蛋</a></td><td>1/2 附魔之瓶、烈焰棒</td></tr>
 <tr><td>1/16 <a onclick="change('vanil')" href="#spawn_egg">恶魂刷怪蛋</a></td><td>1/2 附魔之瓶、恶魂之泪</td></tr>
@@ -1068,13 +1068,13 @@ function change(str){
 </span></span>
 <p>机械核心部件为<a onclick="change('elements')" href="#black_force_of_moon">黑色月之力</a>。</p>
 <table class="center"><thead><tr><th colspan="3">消耗</th><th>产物</th><th>时长</th></tr></thead><tbody>
-<tr></td><td><a href="#iron_dust">铁粉</a></td><td><a href="#iron_dust">铁粉</a></td><td rowspan="7">附魔之瓶</td><td>6 铁锭</td><td rowspan="7">10秒</td></tr>
-<tr><td><a href="#gold_dust">金粉</a></td><td><a href="#gold_dust">金粉</a></td><td>6 金锭</td></tr>
-<tr><td><a href="#carbon_dust">煤炭粉</a></td><td><a href="#carbon_dust">煤炭粉</a></td><td>6 煤炭</td></tr>
-<tr><td><a href="#diamond_dust">钻石粉</a></td><td><a href="#diamond_dust">钻石粉</a></td><td>6 钻石</td></tr>
-<tr><td><a href="#emerald_dust">绿宝石粉</a></td><td><a href="#emerald_dust">绿宝石粉</a></td><td>6 绿宝石</td></tr>
-<tr><td><a href="#lapis_dust">青金石粉</a></td><td><a href="#lapis_dust">青金石粉</a></td><td>6 青金石</td></tr>
-<tr><td><a href="#quartz_dust">石英粉</a></td><td><a href="#quartz_dust">石英粉</a></td><td>6 石英</td></tr>
+<tr></td><td><a href="#iron_dust">铁粉</a></td><td><a href="#iron_dust">铁粉</a></td><td><a href="#iron_dust">铁粉</a></td><td>铁块</td><td rowspan="7">10秒</td></tr>
+<tr><td><a href="#gold_dust">金粉</a></td><td><a href="#gold_dust">金粉</a></td><td><a href="#gold_dust">金粉</a></td><td>金块</td></tr>
+<tr><td><a href="#carbon_dust">煤炭粉</a></td><td><a href="#carbon_dust">煤炭粉</a></td><td><a href="#carbon_dust">煤炭粉</a></td><td>煤炭块</td></tr>
+<tr><td><a href="#diamond_dust">钻石粉</a></td><td><a href="#diamond_dust">钻石粉</a></td><td><a href="#diamond_dust">钻石粉</a></td><td>钻石块</td></tr>
+<tr><td><a href="#emerald_dust">绿宝石粉</a></td><td><a href="#emerald_dust">绿宝石粉</a></td><td><a href="#emerald_dust">绿宝石粉</a></td><td>绿宝石块</td></tr>
+<tr><td><a href="#lapis_dust">青金石粉</a></td><td><a href="#lapis_dust">青金石粉</a></td><td><a href="#lapis_dust">青金石粉</a></td><td>青金石块</td></tr>
+<tr><td><a href="#quartz_dust">石英粉</a></td><td><a href="#quartz_dust">石英粉</a></td><td><a href="#quartz_dust">石英粉</a></td><td>石英块</td></tr>
 
 <tr><td><a href="#iron_dust">铁粉</a></td><td colspan="2" rowspan="3">附魔之瓶</td><td>3 附魔铁锭</td><td rowspan="5">20秒</td></tr>
 <tr><td><a href="#gold_dust">金粉</a></td><td>3 附魔金锭</td></tr>
@@ -1255,7 +1255,7 @@ function change(str){
 </span><span class="iron_ingot" title="附魔铁锭"><span class="enchant">*</span>
 </span></span></span><span class="mcui-arrow"></span><span class="mcui-output">
 <span class="colorful_items coordinate_recorder" title="坐标记录仪">
-</span></span></span></td><td>右击记录当前位置，再次右击方块可建立单向传送门。注意一次只能记录一个坐标。</td></tr>
+</span></span></span></td><td>在A处右击记录坐标，然后右击方块B可建立B到A的单向传送门。注意每名玩家一次只能记录一个坐标。</td></tr>
 <!-- 
 <tr><th><strong id="transport_ball">传送球 (Transport Ball)</strong></th><td>末影珍珠+<a href="#yellow_force_of_earth" onclick="change('elements');">黄色地之力</a>+<a href="#enchanted_gold">附魔金锭</a>+<a href="#experience_releaser">经验释放器</a>+<a href="#enchanted_iron">附魔铁锭</a>+<a href="#enchanted_diamond">附魔钻石</a></td>
 <td><span class="mcui"><span><span class="mcui-row"><span class="experience_bottle" title="附魔之瓶">
@@ -1841,7 +1841,7 @@ function change(str){
 <p>钻石剑可附加属性：
 <ul>
 <li>攻击速度4.0-0.4~-1.8(+0.4)</li>
-<li>攻击伤害1.0+6~13(+2)</li>
+<li>攻击伤害1.0+6~13(+2) (覆盖锋利效果)</li>
 <li>速度0.1+0.002~0.016(+0.004)</li>
 <li>幸运+0.25~2(+0.5)</li>
 </ul>
